# just_exercises

./: 10_map_shared.cpp  11_call_once_singleton.cpp  12_cond_var.cpp  13_multhithreaded_inner_product.cpp  14_packaged_task.cpp  15_exceprion_ptr.cpp  16_non_type_templ.cpp  16_owerflow.cpp  17_visit.cpp  18_less_concept_cpp20.cpp  19_spin_lock.cpp  1_user_literals.cpp  20_viewable_range.cpp  2_big_array.cpp  3_perf_forwading.cpp  4_ptr_bench.cpp  5_move_semantics.cpp  6_variadic_factory.cpp  7_type_deduction.cpp  8_hw_concurrency.cpp  9_thread_sleep.cpp  CMakeLists.txt
algo/: 1_list_el_count.cpp  2_max_element_recursive.cpp  CMakeLists.txt
asio/: 1_simple_timer.cpp  2_timer_with_threads.cpp  3_timer_with_two_threads.cpp  4_posing_work.cpp  5_strand.cpp  6_generic_server.cpp  CMakeLists.txt
networking/: CMakeLists.txt  tcp_echo_server.cpp  udp_echo_server.cpp
